k8s/otel-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-collector
  namespace: default
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.91.0
          command:
            - "/otelcol-contrib"
            - "--config=/conf/otel-collector-config.yaml"
          # Health check for OTLP collector
          livenessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 13133
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: otel-collector-config-vol
              mountPath: /conf
          resources:
            limits:
              cpu: 300m
              memory: 400Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 4317 # OTLP gRPC
              hostPort: 4317
            - containerPort: 4318 # OTLP HTTP
              hostPort: 4318
            - containerPort: 13133 # Health check
      volumes:
        - name: otel-collector-config-vol
          configMap:
            name: otel-collector-conf
            items:
              - key: otel-collector-config
                path: otel-collector-config.yaml
