k8s/eagle-eye.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eagle-eye
  labels:
    app: eagle-eye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eagle-eye
  template:
    metadata:
      labels:
        app: eagle-eye
        tags.datadoghq.com/env: "production"
        tags.datadoghq.com/service: "clestiq-shield-eagle-eye"
        tags.datadoghq.com/version: "1.0.0"
        tags.datadoghq.com/source: "python"
    spec:
      containers:
        - name: eagle-eye
          image: us-east1-docker.pkg.dev/clestiq-shield/clestiq-shield/eagle-eye:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "384Mi"
          ports:
            - containerPort: 8003
          # Health checks
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: datadog-socket
              mountPath: /var/run/datadog
              readOnly: false
      volumes:
        - name: datadog-socket
          hostPath:
            path: /var/run/datadog/
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: eagle-eye
spec:
  type: ClusterIP
  selector:
    app: eagle-eye
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
