k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "clestiq-shield-main-gateway-ip"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "shield-api-cert"
spec:
  rules:
    - host: api.shield.clestiq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
